--- a/poem.rmd
+++ b/poem.rmd
@@ -18,6 +18,11 @@ you, if you change any of this the git program will notice it and compromise you
 
 ## Second Verse
 <!--Put the first five lines of a poem by Robert Frost here!-->
+When I go up through the mowing field,  
+The headless aftermath,  
+Smooth-laid like thatch with the heavy dew,  
+Half closes the garden path.  
+And when I come to the garden ground  
 
 ## Third Verse
 <!--Put the first two verses of The Walrus and the Carpenter here!-->
